--- a/demo/index.html
+++ b/demo/index.html
@@ -21,10 +21,17 @@
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-base.min.css" />
     <link rel="stylesheet" href="/dist/css/mobile-angular-ui-desktop.min.css" />
     <link rel="stylesheet" href="demo.css" />
+    <link rel="stylesheet" href="bootstrap-social.css" />
+    <link rel="stylesheet" href="fullcalendar.css" />
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-touch.min.js"></script>
     <script src="/dist/js/mobile-angular-ui.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="calendar.min.js"></script>
+    <script src="fullcalendar.js"></script>
+    <script src="gcal.js"></script>
+
     <script src="demo.js"></script>
   </head>
   <body ng-app="MobileAngularUiExamples" ng-controller="MainController">
@@ -40,7 +47,7 @@
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" yield-to="title">
-          <span>My Tracker</span>
+          <span>#Hola</span>
         </div>
         <div class="btn-group pull-left">
           <div ng-click="toggle('mainSidebar')" class="btn btn-navbar sidebar-toggle">
