--- a/demo/calendar.html
+++ b/demo/calendar.html
@@ -1,7 +1,8 @@
 <div class="scrollable">
 <div class="scrollable-content">
   <div class="container-fluid section section-break">
- 	<div ui-calendar ng-model="eventSources"></div>
+ 	<div ui-calendar="uiConfig.calendar" ng-model="eventSources"></div>
  	</div>
+	</div>
 </div>
 </div>
