--- a/demo/index.html
+++ b/demo/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="demo.css" />
     <link rel="stylesheet" href="bootstrap-social.css" />
     <link rel="stylesheet" href="fullcalendar.css" />
+    <script src="moment.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-route.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular-touch.min.js"></script>
@@ -47,7 +48,7 @@
 
       <div class="navbar navbar-app navbar-absolute-top">
         <div class="navbar-brand navbar-brand-center" yield-to="title">
-          <span>#Hola</span>
+          <span>#Howlo</span>
         </div>
         <div class="btn-group pull-left">
           <div ng-click="toggle('mainSidebar')" class="btn btn-navbar sidebar-toggle">
