--- a/demo/sidebar.html
+++ b/demo/sidebar.html
@@ -4,7 +4,7 @@
   <div class="scrollable-content">
     <div class="list-group" toggle="off" bubble target="mainSidebar">
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
-      <a class="list-group-item" href="#/save">Save <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/save">Search <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/login">Login <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/calendar">Calendar <i class="fa fa-chevron-right pull-right"></i></a>
       <!-- <a class="list-group-item" href="#/toggle">Toggle <i class="fa fa-chevron-right pull-right"></i></a>
